<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        tools:context=".MainActivity" android:backgroundTint="#FFFFFF" android:background="#FFFFFF"
        android:orientation="horizontal"
>
    
    
    <TextView
            android:text="@string/author"
            android:layout_width="116dp"
            android:layout_height="26dp" android:id="@+id/txt_author"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/txt_bookName"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="@+id/guideline"/>

    <TextView
        android:id="@+id/txt_bookName"
        android:layout_width="132dp"
        android:layout_height="38dp"
        android:layout_marginTop="28dp"
        android:gravity="start"
        android:text="@string/book_name"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />
    
    <TextView
            android:text="@string/no_of_reviews"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:id="@+id/txt_reviews"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/txt_noOfPages2"
            android:layout_marginStart="7dp" app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginBottom="4dp"/>
    <TextView
            android:text="@string/no_of_pages"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:id="@+id/txt_noOfPages2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            android:textSize="12sp" app:layout_constraintTop_toBottomOf="@+id/ratingBar"
            android:layout_marginTop="4dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"/>
    <ImageView
            android:layout_width="34dp"
            android:layout_height="32dp" app:srcCompat="@android:drawable/stat_notify_more"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/imageView1"
            android:background="#FF0000"
            android:backgroundTint="#FF0000" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="60dp"
            app:layout_constraintHorizontal_bias="0.777" app:layout_constraintVertical_bias="0.535"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintBottom_toBottomOf="parent" android:contentDescription="@string/des"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.32603407"/>
    <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/guideline2"
                                                android:orientation="vertical" app:layout_constraintGuide_end="107dp"/>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/ratingBar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            app:layout_constraintBottom_toTopOf="@+id/txt_reviews"
            app:layout_constraintTop_toBottomOf="@+id/txt_author"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.007"
            app:layout_constraintStart_toStartOf="@+id/guideline" android:layout_marginTop="5dp"/>

    <ImageView
        android:id="@+id/pictureView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="26dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txt_author"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

